fix: overflow cutting off top row metrics

--- a/fullstack/frontend/src/components/Metrics.css
+++ b/fullstack/frontend/src/components/Metrics.css
@@ -3,33 +3,28 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: scroll;
+    overflow: visible;
   }
   
-  .column {
+.column {
     width: 33%;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     display: flex;
     border-radius: 10px;
-  }
+}
   
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  .decision {
+.decision {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
+}
   
-  .filler {
+.filler {
     color: #0a111f;
     font-size:20px;
-  }
+}
   
   .text {
     font-weight: 700;
